# blanc

./: .coverage  .env.template  .gitignore  ALL_GAPS_COMPLETE.md  ALL_GOVERNMENT_KBS.md  ALL_KBS_COMPLETE.md  BLOCKERS_CHECK.md  COMPREHENSIVE_PROJECT_STATUS.md  COMPREHENSIVE_STATUS.md  COMPREHENSIVE_STATUS_REPORT.md  CONSOLIDATION_SUMMARY.md  CONTINUE_WEEK3.md  COVERAGE_AUDIT.md  DATA_DOWNLOAD_INSTRUCTIONS.md  DAY1_ACHIEVEMENTS.md  DAY1_FINAL_STATUS.md  DEFEASIBLE_SCENARIOS_BRIEF.md  DOCUMENTATION_CONSOLIDATED.md  DOCUMENTATION_INDEX.md  DOMAIN_EXPERT_REQUIREMENTS.md  END_OF_SESSION_STATUS.md  FINAL_AUDIT_REPORT.md  FINAL_STATUS.md  GIT_CLEANUP_AUDIT.md  HANDOFF_FOR_NEXT_SESSION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY_2026-02-13.md  INFRASTRUCTURE_COMPLETE_FINAL.md  INSTALL.md  KB_EXTRACTION_COMPLETE.md  KB_INVENTORY.md  KB_REQUIREMENTS_AUDIT.md  KB_STRUCTURE_FINDINGS.md  KB_VERIFICATION_CHECKLIST.md  KNOWLEDGE_BASE_INVENTORY.md  KNOWLEDGE_BASE_POLICY.md  LIBRARY_AUDIT_COMPLETE.md  MVP_FINAL_SUMMARY.md  MVP_IMPLEMENTATION.md  NEURIPS_FULL_ROADMAP.md  (+55 more)
Guidance_Documents/: API_Design.md  COMPREHENSIVE_KB_PIPELINE.md  CONTINUE_DEVELOPMENT.md  CROSS_ONTOLOGY_PLAN.md  CURRENT_STATUS_AND_PLAN.md  DATA_DOWNLOAD.md  GOOGLE_ORG_APPLICATION.docx  HANDOFF.md  INTUITIVE_GUIDE.md  KNOWLEDGE_BASE_POLICY.md  PAPER_ADDITIONS_PROPOSAL.md  Phase1_Summary.md  Phase2_Implementation_Plan.md  Phase2_Summary.md  Phase3_Complete.md  Phase3_Implementation_Plan.md  REPOSITORY_STRUCTURE.md  REVISED_IMPLEMENTATION_PLAN.md  STATUS.md  Week8_Complete.md  Week8_Implementation_Plan.md  Week8_Implementation_Plan.md.ARCHIVED  Week8_Implementation_Plan.md.SUPERSEDED
data/: rts_certification_report.json
docs/: ARCHITECTURE_AUDIT.md  COVERAGE_ANALYSIS.md  COVERAGE_EXPANSION_PLAN.md  README.md  REFACTORING_COMPLETE.md  REMAINING_WORK.md  REPOSITORY_STRUCTURE.md  VALIDATION_STUDY_RESULTS.md  WEEK2_COMPLETE.md  WEEK3_COMPLETION.md
examples/: basic_usage.py
experiments/: _clear_l3_cot_cache.py  _inspect_failures.py  _read_all_summaries.py  _statistical_analysis.py  _verify_results.py  analyze_defab_hard.py  analyze_fact_injection.py  analyze_results.py  analyze_roe_compliance.py  build_synthetic_level3.py  build_tier1_eval_dir.py  clear_truncated_cache.py  compute_delta_synth.py  compute_delta_synth_m2.py  compute_tier1_results.py  conservativity_analysis.py  cross_env_transfer.py  difficulty_analysis.py  error_taxonomy.py  evaluation_pipeline.py  generate_paper_tables.py  inject_facts_naturalistic.py  inspect_defab_hard_failures.py  inspect_pilot.py  level3_evaluator.py  model_interface.py  novelty_analysis.py  partition_sensitivity.py  prompting.py  response_cache.py  roe_compliance_analysis.py  roundtrip_validation.py  run_debate_pilot.py  run_defreasing_comparison.py  run_evaluation.py  run_foundry_local.py  run_human_baseline.py  run_pilot_evaluation.py  scaling_analysis.py  statistics.py  (+5 more)
hpc/: AZURE_FINETUNE.md  README.md  initial_experiment.sh  phase0_curc_quickstart.sh  run_all_experiments.sh  run_local.ps1  run_local.sh  setup_curc_env.sh  slurm_analysis.sh  slurm_debate.sh  slurm_eval_finetuned.sh  slurm_evaluate_azure.sh  slurm_evaluate_curc_all.sh  slurm_evaluate_curc_vllm.sh  slurm_evaluate_foundry.sh  slurm_evaluate_llama.sh  slurm_evaluate_m5_all.sh  slurm_evaluate_m5_curc.sh  slurm_evaluate_m5_foundry.sh  slurm_extract_and_generate.sh  slurm_ft_analysis.sh  slurm_gen_go.sh  slurm_gen_umls.sh  slurm_gen_wikidata.sh  slurm_generate_defab_hard.sh  slurm_train_all.sh  (+11 more)
(+525 files in other folders)
